change tomcat service, all env set in "setenv.sh"